<resources>
    <string name="app_name">Medical Care</string>
    <string name="welcome_quote">We\'re here to provide you with professional guidance and support for your health concerns.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="top_catogory">Top Catogory</string>
    <string name="search_res">search</string>
    <string name="name">Name</string>
    <string name="notification">Notification</string>
    <string name="common_category">Common Category</string>
    <string name="physician">physician</string>
    <string name="info">info</string>
    <string name="skin_and_hair">Skin and hair</string>
    <string name="orthopedician">orthopedician</string>
    <string name="childrens_care">Childrens care</string>
    <string name="physiotherapist">physiotherapist</string>
    <string name="dietition">Dietition</string>
    <string name="mental_wellness">Mental wellness</string>
    <string name="women_s_health">Women\'s health</string>
    <string name="organ_health_category">Organ Health Category</string>
    <string name="ear_nose_and_throat">Ear,Nose and Throat</string>
    <string name="eyes">Eyes</string>
    <string name="teeth">Teeth</string>
    <string name="kidney_and_urinary_tract">Kidney and urinary tract</string>
    <string name="stomach_and_digestive">Stomach and digestive</string>
    <string name="heart">Heart</string>
    <string name="lungs">Lungs</string>
    <string name="brain">Brain</string>
    <string name="chronic_and_long_term_care">Chronic and Long term care</string>
    <string name="diabetics">Diabetics</string>
    <string name="mental_health">Mental health</string>
    <string name="fertility_specialist">Fertility specialist</string>
    <string name="neurologist">Neurologist</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="doctor_welcome">Step into our consultation zone, where your health is the priority, and every concern is met with expertise and empathy. Welcome to a partnership in well-being.</string>
    <string name="login_doctor_account">LOGIN DOCTOR ACCOUNT</string>
    <string name="mobile_number">Mobile number:</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signin">SIGNIN</string>
    <string name="if_you_don_t_have_a_account">If you don\'t have a account?</string>
    <string name="create_account">create account</string>
    <string name="physician_description">A general medical practitioner who diagnoses, treats, and manages various illnesses and health conditions.</string>
    <string name="skin_description">Specializes in the diagnosis and treatment of conditions related to the skin, hair, and nails.</string>
    <string name="ortho_description">Specializes in the diagnosis and treatment of musculoskeletal conditions, including bones, joints, ligaments, tendons, and muscles.</string>
    <string name="child_description">Focuses on the health and well-being of infants, children, and adolescents, providing preventive care and treating childhood illnesses.</string>
    <string name="physio_description">Assists in the rehabilitation of patients through physical exercises and therapies, aiming to improve mobility, function, and overall well-being.</string>
    <string name="deitition_description">Provides expert advice on nutrition and diet, helping individuals manage and prevent health issues through proper eating habits.</string>
    <string name="meltal_description">Addresses mental health concerns, providing therapy, counseling, and support for individuals dealing with emotional and psychological issues.</string>
    <string name="womens_health_description">Focuses on the unique health needs of women, covering areas such as reproductive health, gynecological issues, and hormonal balance.</string>
    <string name="ent_description">Diagnoses and treats disorders related to the ear, nose, throat, and related structures.</string>
    <string name="eye_description">Ophthalmologists or optometrists who diagnose and treat eye conditions, prescribe corrective lenses, and perform eye surgeries.</string>
    <string name="bone">Specializes in the diagnosis and treatment of musculoskeletal conditions, including bones, joints, ligaments, tendons, and muscles.</string>
    <string name="teeth_description">Specializes in oral health, treating issues related to teeth and gums, performing dental procedures, and promoting oral hygiene.</string>
    <string name="kidney_description">Specializes in the diagnosis and treatment of kidney-related disorders and diseases</string>
    <string name="stomach_description">Focuses on the digestive system, diagnosing and treating conditions affecting the stomach, intestines, liver, and related organs.</string>
    <string name="heart_descrption">Deals with the diagnosis and treatment of heart-related conditions, including heart disease and cardiovascular issues.</string>
    <string name="lungs_desciption">Specializes in respiratory health, diagnosing and treating conditions affecting the lungs and respiratory system.</string>
    <string name="brain_description">Focuses on the diagnosis and treatment of disorders related to the nervous system, including the brain and spinal cord.</string>
    <string name="diabetics_description">Specializes in the management of hormonal disorders, including diabetes, thyroid issues, and metabolic conditions.</string>
    <string name="fertility_description">Assists individuals and couples in addressing fertility issues, providing diagnosis and treatment for reproductive health.</string>
    <string name="neuro_description">Specializes in the diagnosis and treatment of disorders related to the nervous system, including the brain and spinal cord.</string>
    <string name="title_activity_message_module">MessageModule</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>